Fix: Address overflow of clear box

--- a/css/common.scss
+++ b/css/common.scss
@@ -19,6 +19,7 @@ div.dt-button-collection {
     z-index: 2002 !important;
 
     div.dtsb-searchBuilder {
+        box-sizing: border-box;
         padding-left: 1em !important;
         padding-right: 1em !important;
     }
